# se-research-project

./: .gitignore  CMakeLists.txt  Readme.md  setup.sh  simplify_conditions.cpp
config/: AstMarkers.xml  TestingConfig.xml
samples/: basic.cpp  conditions.cpp
src/: program.cpp
src/markers/: ConditionMarker.cpp  ConditionMarker.hpp  ConditionMarker.internal.cpp  FailingMarker.cpp  FailingMarker.hpp  FunctionLengthMarker.cpp  FunctionLengthMarker.hpp  IdentifierMarker.cpp  IdentifierMarker.hpp  IdentifierMarker.internal.cpp  IndentationCheck.cpp  IndentationCheck.hpp  IndentationCheck.internal.cpp  MarkerRegistry.cpp  MarkerRegistry.hpp  SimpleMarker.hpp  StubMarker.cpp  VowelCounter.cpp
src/markers/options/: CompilerOptions.generated.cpp  CompilerOptions.generated.hpp  FuncLenMkrOptions.generated.cpp  FuncLenMkrOptions.generated.hpp  IdentifierOptions.generated.cpp  IdentifierOptions.generated.hpp  IndentCheckOptions.generated.cpp  IndentCheckOptions.generated.hpp  SimpleOptions.generated.cpp  SimpleOptions.generated.hpp  StdOptions.generated.cpp  StdOptions.generated.hpp
src/testing/: FeedbackItem.cpp  FeedbackItem.hpp  FeedbackSeverity.hpp  SourceLocation.cpp  SourceLocation.hpp  TestResult.hpp
src/utils/: ArgumentParser.cpp  ArgumentParser.hpp  ConfigConverter.cpp  ConfigConverter.hpp  ConfigReader.cpp  ConfigReader.generated.cpp  ConfigReader.hpp
src/utils/configuration/: ConfigOption.hpp  RootConfig.hpp  TestConfig.hpp
src/writers/: DebugLogger.cpp  DebugLogger.hpp  JsonWriter.cpp  JsonWriter.hpp  WriterRegistry.cpp  WriterRegistry.hpp
test-runner/: CMakeLists.txt  Makefile  launcher.cpp  program  program.cpp
test-runner/config/: defaultconfig.xml
test-runner/markers/: Marker.cpp  MarkerRegistry.cpp  SimpleMarker.cpp  SimpleMarker.hpp  StubMarker.cpp  StubMarker.hpp  VowelCounter.cpp  VowelCounter.hpp
test-runner/src/: program.cpp
test-runner/src/markers/: Marker.hpp  MarkerRegistry.cpp  MarkerRegistry.hpp  SimpleMarker.cpp  SimpleMarker.hpp  StubMarker.cpp  StubMarker.hpp  VowelCounter.cpp  VowelCounter.hpp
test-runner/src/markers/options/: SimpleOptions.generated.hpp  StdOptions.generated.hpp
test-runner/src/utils/: ConfigConverter.cpp  ConfigReader.cpp  ConfigReader.hpp  Configurations.hpp  FileIO.hpp
test-runner/src/utils/configuration/: ConfigOption.hpp  OutputConfig.hpp  TestConfig.hpp
test-runner/src/writers/: DebugLogger.cpp  DebugLogger.hpp  ResultWriter.cpp  ResultWriter.hpp  WriterRegistry.cpp  WriterRegistry.hpp
test-runner/testing/: SourceLocation.cpp  SourceLocation.hpp  TestResult.cpp  TestResult.hpp
test-runner/tools/generation/: CodeGeneration.py  markerOptions.json  optionFileGenerator.py  options.py
test-runner/tools/generation/output/: SimpleOptions.generated.hpp  StdOptions.generated.hpp
test-runner/tools/generation/templates/: ConfigReaderTemplate.cpp  OptionsTemplate.hpp  TestConfigTemplate.hpp
test-runner/utils/: ArgumentParser.cpp  ArgumentParser.hpp  FileIO.cpp
test-runner/writers/: DebugLogger.cpp  DebugLogger.hpp  WriterRegistry.cpp  WriterRegistry.hpp
tests/samples/: CMakeLists.txt  Conditions-1.c  Conditions-2.c  FuncLen-1.c  FuncLen-2.c  Identifiers-1.c  Indents-1.c  Indents-2.c  Indents-3.c  hello_world.cpp  indents_1.cpp
tools/generation/: CodeGeneration.py  markerOptions.json  options.py
tools/generation/templates/: ConfigReaderTemplate.cpp  OptionsTemplate.cpp  OptionsTemplate.hpp  TestConfigTemplate.hpp
tools/stats/: config.xml  stats.py  stats.sh
